--- a/notebooks/reels_walkthrough.ipynb
+++ b/notebooks/reels_walkthrough.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mercury.dynamics import reels"
+    "import reels"
    ]
   },
   {
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.3.1'"
+       "'1.4.1'"
       ]
      },
      "execution_count": 3,
@@ -82,9 +82,7 @@
     }
    ],
    "source": [
-    "import mercury.dynamics as md\n",
-    "\n",
-    "md.__version__"
+    "reels.__version__"
    ]
   },
   {
@@ -231,10 +229,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>click</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-06-03 12:30:41</td>\n",
+       "      <td>2022-06-05 16:33:41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -242,7 +240,7 @@
        "      <td>200</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2022-06-03 17:41:16</td>\n",
+       "      <td>2022-06-08 00:03:41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -250,23 +248,23 @@
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2022-06-04 06:54:14</td>\n",
+       "      <td>2022-06-10 02:17:22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>0</th>\n",
        "      <td>click</td>\n",
-       "      <td>201</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-06-05 14:01:38</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-06-05 21:33:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
        "      <td>click</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-06-06 08:04:08</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-06-07 09:03:39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -277,65 +275,65 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>0</th>\n",
+       "      <td>click</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2022-06-04 15:36:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>click</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1000</td>\n",
-       "      <td>2022-06-09 20:29:25</td>\n",
+       "      <td>2022-06-04 23:30:11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>2</th>\n",
        "      <td>click</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1000</td>\n",
-       "      <td>2022-06-10 01:03:12</td>\n",
+       "      <td>2022-06-06 11:37:11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>3</th>\n",
        "      <td>click</td>\n",
-       "      <td>200</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>1000</td>\n",
-       "      <td>2022-06-10 18:22:37</td>\n",
+       "      <td>2022-06-07 19:16:19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>4</th>\n",
        "      <td>click</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>1000</td>\n",
-       "      <td>2022-06-13 10:32:31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>click</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>2022-06-14 00:45:06</td>\n",
+       "      <td>2022-06-08 08:06:15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6073 rows × 5 columns</p>\n",
+       "<p>6206 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   emitter  description  weight  client                 time\n",
-       "0    click            1       1       1  2022-06-03 12:30:41\n",
-       "1    click          200       1       1  2022-06-03 17:41:16\n",
-       "2    click            5       1       1  2022-06-04 06:54:14\n",
-       "3    click          201       1       1  2022-06-05 14:01:38\n",
-       "4    click            1       1       1  2022-06-06 08:04:08\n",
+       "0    click            3       1       1  2022-06-05 16:33:41\n",
+       "1    click          200       1       1  2022-06-08 00:03:41\n",
+       "2    click            5       1       1  2022-06-10 02:17:22\n",
+       "0    click            5       1       2  2022-06-05 21:33:00\n",
+       "1    click            1       1       2  2022-06-07 09:03:39\n",
        "..     ...          ...     ...     ...                  ...\n",
-       "6    click            2       1    1000  2022-06-09 20:29:25\n",
-       "7    click            3       1    1000  2022-06-10 01:03:12\n",
-       "8    click          200       1    1000  2022-06-10 18:22:37\n",
-       "9    click            5       1    1000  2022-06-13 10:32:31\n",
-       "10   click            3       1    1000  2022-06-14 00:45:06\n",
+       "0    click            4       1    1000  2022-06-04 15:36:59\n",
+       "1    click            2       1    1000  2022-06-04 23:30:11\n",
+       "2    click            3       1    1000  2022-06-06 11:37:11\n",
+       "3    click            4       1    1000  2022-06-07 19:16:19\n",
+       "4    click            5       1    1000  2022-06-08 08:06:15\n",
        "\n",
-       "[6073 rows x 5 columns]"
+       "[6206 rows x 5 columns]"
       ]
      },
      "execution_count": 6,
@@ -389,28 +387,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-06-13 09:30:58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <td>3</td>\n",
-       "      <td>2022-06-19 18:06:29</td>\n",
+       "      <td>2022-06-21 20:25:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2022-06-13 17:52:35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>5</td>\n",
-       "      <td>2022-06-08 16:37:05</td>\n",
+       "      <td>2022-06-09 06:38:24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10</td>\n",
-       "      <td>2022-06-11 09:33:39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>13</td>\n",
-       "      <td>2022-06-08 20:34:35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>14</td>\n",
-       "      <td>2022-06-15 09:36:29</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2022-06-09 08:37:14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -419,49 +417,49 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>985</td>\n",
-       "      <td>2022-06-10 07:32:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>986</td>\n",
-       "      <td>2022-06-19 16:07:48</td>\n",
+       "      <td>988</td>\n",
+       "      <td>2022-06-10 10:50:10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>989</td>\n",
-       "      <td>2022-06-10 11:26:42</td>\n",
+       "      <td>2022-06-10 10:50:04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>995</td>\n",
-       "      <td>2022-06-09 21:59:48</td>\n",
+       "      <td>990</td>\n",
+       "      <td>2022-06-19 01:39:49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>2022-06-16 19:30:04</td>\n",
+       "      <td>991</td>\n",
+       "      <td>2022-06-14 20:25:39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>996</td>\n",
+       "      <td>2022-06-11 20:40:21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>386 rows × 2 columns</p>\n",
+       "<p>404 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    client                 time\n",
-       "0        3  2022-06-19 18:06:29\n",
-       "0        5  2022-06-08 16:37:05\n",
-       "0       10  2022-06-11 09:33:39\n",
-       "0       13  2022-06-08 20:34:35\n",
-       "0       14  2022-06-15 09:36:29\n",
+       "0        2  2022-06-13 09:30:58\n",
+       "0        3  2022-06-21 20:25:13\n",
+       "0        4  2022-06-13 17:52:35\n",
+       "0        5  2022-06-09 06:38:24\n",
+       "0        6  2022-06-09 08:37:14\n",
        "..     ...                  ...\n",
-       "0      985  2022-06-10 07:32:30\n",
-       "0      986  2022-06-19 16:07:48\n",
-       "0      989  2022-06-10 11:26:42\n",
-       "0      995  2022-06-09 21:59:48\n",
-       "0     1000  2022-06-16 19:30:04\n",
+       "0      988  2022-06-10 10:50:10\n",
+       "0      989  2022-06-10 10:50:04\n",
+       "0      990  2022-06-19 01:39:49\n",
+       "0      991  2022-06-14 20:25:39\n",
+       "0      996  2022-06-11 20:40:21\n",
        "\n",
-       "[386 rows x 2 columns]"
+       "[404 rows x 2 columns]"
       ]
      },
      "execution_count": 7,
@@ -511,7 +509,7 @@
        "\n",
        "Column names: emitter, description, weight, client, time\n",
        "\n",
-       "Shape: 6073 x 5"
+       "Shape: 6206 x 5"
       ]
      },
      "execution_count": 9,
@@ -536,7 +534,7 @@
        "\n",
        "Column names: client, time\n",
        "\n",
-       "Shape: 386 x 2"
+       "Shape: 404 x 2"
       ]
      },
      "execution_count": 10,
@@ -672,13 +670,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('click', '2', 1.0, 7)\n",
-      "('click', '201', 1.0, 4)\n",
-      "('click', '3', 1.0, 6)\n",
+      "('click', '2', 1.0, 5)\n",
+      "('click', '201', 1.0, 7)\n",
+      "('click', '3', 1.0, 1)\n",
       "('click', '200', 1.0, 2)\n",
-      "('click', '1', 1.0, 1)\n",
+      "('click', '1', 1.0, 4)\n",
       "('click', '5', 1.0, 3)\n",
-      "('click', '4', 1.0, 5)\n"
+      "('click', '4', 1.0, 6)\n"
      ]
     }
    ],
@@ -862,7 +860,7 @@
     {
      "data": {
       "text/plain": [
-       "reels.Clips object with 1000 clips totalling 6073 events"
+       "reels.Clips object with 1000 clips totalling 6206 events"
       ]
      },
      "execution_count": 21,
@@ -904,7 +902,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 1, 5, 1, 3]"
+       "[1, 2, 3]"
       ]
      },
      "execution_count": 23,
@@ -925,7 +923,7 @@
     {
      "data": {
       "text/plain": [
-       "[2, 4, 6, 7, 7, 3, 7, 6, 2, 3, 6]"
+       "[6, 5, 1, 6, 3]"
       ]
      },
      "execution_count": 24,
@@ -1075,7 +1073,7 @@
     {
      "data": {
       "text/plain": [
-       "386"
+       "404"
       ]
      },
      "execution_count": 30,
@@ -1106,7 +1104,7 @@
       "text/plain": [
        "reels.Targets object with 1000 clips\n",
        "\n",
-       "Has 386 targets.\n",
+       "Has 404 targets.\n",
        "\n",
        "Is not fitted."
       ]
@@ -1201,7 +1199,7 @@
       "text/plain": [
        "reels.Targets object with 1000 clips\n",
        "\n",
-       "Has 386 targets.\n",
+       "Has 404 targets.\n",
        "\n",
        "Is fitted with 1000 clips."
       ]
@@ -1224,7 +1222,7 @@
     {
      "data": {
       "text/plain": [
-       "(1000, 386, 4621.202282, 7)"
+       "(1000, 404, 4853.931216, 7)"
       ]
      },
      "execution_count": 35,
@@ -1303,7 +1301,7 @@
     {
      "data": {
       "text/plain": [
-       "(28, 0, 0.0, 6)"
+       "(23, 0, 0.0, 6)"
       ]
      },
      "execution_count": 38,
@@ -1360,11 +1358,11 @@
     {
      "data": {
       "text/plain": [
-       "[189851.88139856473,\n",
-       " 331699.56730975,\n",
-       " 406802.11923933687,\n",
-       " 66487.28137370583,\n",
-       " 290693.62613969203]"
+       "[315576000.0,\n",
+       " 302672.45977599354,\n",
+       " 353361.4014572389,\n",
+       " 390552.25551585515,\n",
+       " 164680.3832252809]"
       ]
      },
      "execution_count": 40,
@@ -1437,9 +1435,9 @@
      "text": [
       "Pred    0    1\n",
       "Obs           \n",
-      "0     525   89\n",
-      "1      86  300\n",
-      "Accuracy: 0.825, precision: 0.771, f1-score: 0.774\n"
+      "0     509   87\n",
+      "1      84  320\n",
+      "Accuracy: 0.829, precision: 0.786, f1-score: 0.789\n"
      ]
     }
    ],
@@ -1531,11 +1529,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pred    0   1\n",
-      "Obs          \n",
-      "0     254  77\n",
-      "1      73  96\n",
-      "Accuracy: 0.700, precision: 0.555, f1-score: 0.561\n"
+      "Pred    0    1\n",
+      "Obs           \n",
+      "0     223   70\n",
+      "1      67  140\n",
+      "Accuracy: 0.726, precision: 0.667, f1-score: 0.671\n"
      ]
     }
    ],
@@ -1631,9 +1629,9 @@
      "text": [
       "Pred    0    1\n",
       "Obs           \n",
-      "0     525   89\n",
-      "1      86  300\n",
-      "Accuracy: 0.825, precision: 0.771, f1-score: 0.774\n"
+      "0     509   87\n",
+      "1      84  320\n",
+      "Accuracy: 0.829, precision: 0.786, f1-score: 0.789\n"
      ]
     }
    ],
@@ -1661,9 +1659,9 @@
      "text": [
       "Pred    0    1\n",
       "Obs           \n",
-      "0     546   68\n",
-      "1      67  319\n",
-      "Accuracy: 0.865, precision: 0.824, f1-score: 0.825\n"
+      "0     542   54\n",
+      "1      53  351\n",
+      "Accuracy: 0.893, precision: 0.867, f1-score: 0.868\n"
      ]
     }
    ],
@@ -1762,9 +1760,9 @@
      "text": [
       "Pred    0    1\n",
       "Obs           \n",
-      "0     581   33\n",
-      "1      32  354\n",
-      "Accuracy: 0.935, precision: 0.915, f1-score: 0.916\n"
+      "0     570   26\n",
+      "1      25  379\n",
+      "Accuracy: 0.949, precision: 0.936, f1-score: 0.937\n"
      ]
     }
    ],
@@ -1834,9 +1832,9 @@
      "text": [
       "Pred    0    1\n",
       "Obs           \n",
-      "0     583   31\n",
-      "1      30  356\n",
-      "Accuracy: 0.939, precision: 0.920, f1-score: 0.921\n"
+      "0     570   26\n",
+      "1      24  380\n",
+      "Accuracy: 0.950, precision: 0.936, f1-score: 0.938\n"
      ]
     }
    ],
@@ -1906,9 +1904,9 @@
      "text": [
       "Pred    0    1\n",
       "Obs           \n",
-      "0     516   98\n",
-      "1      93  293\n",
-      "Accuracy: 0.809, precision: 0.749, f1-score: 0.754\n"
+      "0     488  108\n",
+      "1     105  299\n",
+      "Accuracy: 0.787, precision: 0.735, f1-score: 0.737\n"
      ]
     }
    ],
@@ -1980,9 +1978,9 @@
      "text": [
       "Pred    0    1\n",
       "Obs           \n",
-      "0     529   85\n",
-      "1      84  302\n",
-      "Accuracy: 0.831, precision: 0.780, f1-score: 0.781\n"
+      "0     515   81\n",
+      "1      71  333\n",
+      "Accuracy: 0.848, precision: 0.804, f1-score: 0.814\n"
      ]
     }
    ],
