[AUTOGEN] makes doc

--- a/reference/latex/classreels_1_1Clips.tex
+++ b/reference/latex/classreels_1_1Clips.tex
@@ -11,8 +11,7 @@ A container class to hold clips (sequences of events).
 
 
 
-Inheritance diagram for reels\+::Clips\+:
-\nopagebreak
+Inheritance diagram for reels\+::Clips\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for reels\+::Clips\+:
 \end{figure}
 
 
-Collaboration diagram for reels\+::Clips\+:
-\nopagebreak
+Collaboration diagram for reels\+::Clips\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
