--- a/reference/latex/classreels_1_1Targets.tex
+++ b/reference/latex/classreels_1_1Targets.tex
@@ -11,8 +11,7 @@ A container class to hold target events and do predictions based on clips.
 
 
 
-Inheritance diagram for reels\+::Targets\+:
-\nopagebreak
+Inheritance diagram for reels\+::Targets\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for reels\+::Targets\+:
 \end{figure}
 
 
-Collaboration diagram for reels\+::Targets\+:
-\nopagebreak
+Collaboration diagram for reels\+::Targets\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
