--- a/reference/latex/classreels_1_1TimeUtil.tex
+++ b/reference/latex/classreels_1_1TimeUtil.tex
@@ -11,8 +11,7 @@ A common ancestor of \mbox{\hyperlink{classreels_1_1Clips}{Clips}} and \mbox{\hy
 
 
 
-Inheritance diagram for reels\+::Time\+Util\+:
-\nopagebreak
+Inheritance diagram for reels\+::Time\+Util\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
