--- a/reference/latex/structreels_1_1BinEventPt.tex
+++ b/reference/latex/structreels_1_1BinEventPt.tex
@@ -11,8 +11,7 @@ The binary representation of an event as stored in a transaction file.
 
 
 
-Inheritance diagram for reels\+::Bin\+Event\+Pt\+:
-\nopagebreak
+Inheritance diagram for reels\+::Bin\+Event\+Pt\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
