--- a/reference/latex/structreels_1_1BinTransaction.tex
+++ b/reference/latex/structreels_1_1BinTransaction.tex
@@ -11,8 +11,7 @@ The binary representation of a transaction in a transaction file.
 
 
 
-Inheritance diagram for reels\+::Bin\+Transaction\+:
-\nopagebreak
+Inheritance diagram for reels\+::Bin\+Transaction\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for reels\+::Bin\+Transaction\+:
 \end{figure}
 
 
-Collaboration diagram for reels\+::Bin\+Transaction\+:
-\nopagebreak
+Collaboration diagram for reels\+::Bin\+Transaction\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
