[REFACTOR] Renames to exp_decay
The argument was given two names "exp_decay" and "exponential_decay" which generated doxy inconsitency.

--- a/notebooks/reels_event_optimization_colab.ipynb
+++ b/notebooks/reels_event_optimization_colab.ipynb
@@ -1714,7 +1714,7 @@
         "\n",
         "The next two, `sum_dep` and `n_dep` provide an idea of how deep the code is found on average (== sum_dep/n_dep) in the sequence and can be used in the score when exponential decay is not zero.\n",
         "\n",
-        "The next is `edf` (exponential decay factor) and multiplies the final score. E.g. If we set `exponential_decay` to 0.00693 it decays to approx 0.5 in 100 steps because (1- 0.00693)^100 is 0.4988.\n",
+        "The next is `edf` (exponential decay factor) and multiplies the final score. E.g. If we set `exp_decay` to 0.00693 it decays to approx 0.5 in 100 steps because (1- 0.00693)^100 is 0.4988.\n",
         "\n",
         "The next two are the proportion (or lower bound for the confidence interval) of target/seen for both \"incl\" and \"succ\" as explained above.\n",
         "\n",
