DEMERCURY-125 Adds Introduction and conclusion cells to the notebooks

--- a/notebooks/reels_event_optimization_colab.ipynb
+++ b/notebooks/reels_event_optimization_colab.ipynb
@@ -25,6 +25,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8de156cb-23d4-41ab-be60-b5b36a41453c",
+   "metadata": {},
+   "source": [
+    "## Event Optimization Overview\n",
+    "\n",
+    "This notebook explores how to optimize event representations in `reels` to improve model performance and interpretability. You will learn how to:\n",
+    "\n",
+    "* Control event discovery using configuration parameters\n",
+    "* Reduce high-cardinality event spaces\n",
+    "* Evaluate the impact of different event settings on model performance\n",
+    "* Compare optimized and non-optimized configurations\n",
+    "\n",
+    "The goal is to show how thoughtful event design can significantly influence both predictive quality and model structure.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baed3406-bba4-4cf1-87bd-58b127ff77cb",
+   "metadata": {},
+   "source": [
+    "## What is Event Optimization?\n",
+    "\n",
+    "In `reels`, event optimization refers to the process of refining how raw event codes are represented before model training. Real-world datasets often contain thousands of distinct event codes, many of which are sparse, redundant, or weakly informative.\n",
+    "\n",
+    "Event optimization reduces this high-cardinality space by:\n",
+    "\n",
+    "* Limiting the maximum number of discovered events\n",
+    "* Selecting the most informative codes\n",
+    "* Aggregating or pruning infrequent events\n",
+    "\n",
+    "The result is a more compact and balanced event representation, which can improve model stability, interpretability, and predictive performance while reducing noise introduced by rare or random codes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "51496d5b-babc-45be-ad69-1e5ae66f619e",
    "metadata": {
     "id": "51496d5b-babc-45be-ad69-1e5ae66f619e"
@@ -1167,6 +1202,39 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "<b>Note that:</b> The optimized model is smaller, builds a smaller tree and generalizes better on unseen data.\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "453c15ba-c607-4c4b-9cee-67f012be6358",
+   "metadata": {},
+   "source": [
+    "## Results Interpretation\n",
+    "\n",
+    "The comparison between the baseline configuration and the optimized event configuration shows clear structural and performance differences.\n",
+    "\n",
+    "When event discovery is unrestricted, the model builds a larger and more fragmented tree. Many nodes are supported by very few visits, which leads to sparsity and less reliable estimates. This is reflected in a more unbalanced structure and weaker generalization performance.\n",
+    "\n",
+    "After applying event optimization (e.g., limiting the number of discovered codes), the event space becomes more compact. The resulting tree is smaller, with more balanced node visits and stronger statistical support per split. Performance metrics improve or become more stable across cross-validation folds, indicating better generalization.\n",
+    "\n",
+    "In practical terms, these results show that reducing event cardinality does not simply shrink the model — it restructures it. The optimized configuration concentrates signal into fewer, more informative event codes, leading to a cleaner model structure and more reliable predictions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c99e962d-5536-4bce-b788-6ba5ed016acd",
+   "metadata": {},
+   "source": [
+    "## Key Takeaways\n",
+    "\n",
+    "By the end of this notebook, you should understand that:\n",
+    "\n",
+    "* **Event representation strongly influences model behavior.** The way raw codes are defined and limited directly affects tree structure, sparsity, and predictive stability.\n",
+    "* **High-cardinality event spaces can hurt generalization.** Too many rare or weakly supported codes lead to fragmented trees and unreliable estimates.\n",
+    "* **Event optimization is a structural decision, not just a tuning trick.** Limiting or selecting events reshapes the model and concentrates signal into more informative splits.\n",
+    "* **Simpler event spaces can improve both interpretability and performance.** A more compact representation often yields more balanced nodes and more stable cross-validated results.\n",
+    "\n",
+    "The main lesson is that thoughtful event design is a core part of modeling with `reels`, not a secondary refinement step.\n"
    ]
   }
  ],
