--- a/notebooks/reels_walkthrough_colab.ipynb
+++ b/notebooks/reels_walkthrough_colab.ipynb
@@ -29,6 +29,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "754ca9ce-44ad-4fe7-a8f2-f6e73f429711",
+   "metadata": {},
+   "source": [
+    "## Walkthrough Overview\n",
+    "\n",
+    "This notebook provides a step-by-step introduction to the core `reels` workflow. You will learn how to:\n",
+    "\n",
+    "* Create and populate `Clips`, `Targets`, and `Events` objects\n",
+    "* Fit a model to sequential event data\n",
+    "* Generate and interpret time-to-event predictions\n",
+    "* Evaluate model behavior under different configurations\n",
+    "\n",
+    "The goal is to give a practical understanding of how the main components interact and how to use them in a typical modeling pipeline.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "26a87111-d1fc-4fc2-99e6-68f497c15318",
    "metadata": {
     "id": "26a87111-d1fc-4fc2-99e6-68f497c15318"
@@ -1732,6 +1749,24 @@
     "    <b>Note:</b> In all our examples we have been using the <b>predict_clips()</b> method that makes predictions based on clips. Besides that method, there is a \n",
     "<b>predict_clients()</b> that makes predictions based on client ids stored in a Clients object. For it to work, the clients must be part of the Clips object passed to the constructor where their clips can be found.\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a199598-2568-4fd5-b100-457347857182",
+   "metadata": {},
+   "source": [
+    "## Key Takeaways\n",
+    "\n",
+    "By the end of this walkthrough, you should understand that:\n",
+    "\n",
+    "* **The `reels` workflow follows a clear pipeline.** Data is structured into `Clips`, linked to `Targets`, optionally enriched with `Events`, and then used to fit a model.\n",
+    "* **Time-to-event predictions are central.** The model estimates the expected time to a target event, which can be interpreted directly or transformed into a risk-like score.\n",
+    "* **Predictions are generated per clip.** Outputs are returned as iterators and may require aggregation depending on the evaluation setup.\n",
+    "* **Model behavior depends on configuration choices.** Sequence length, event definitions, and transformation settings can significantly affect performance.\n",
+    "* **Evaluation requires careful interpretation.** Averaging predictions, taking minimums, or applying confidence bounds each corresponds to a different modeling assumption.\n",
+    "\n",
+    "The main objective is to be comfortable navigating the full modeling cycle — from structured sequential data to interpretable predictions.\n"
    ]
   },
   {
