DEMERCURY-125 Renders the updated documentation after merging master

--- a/reference/latex/reels_8h.tex
+++ b/reference/latex/reels_8h.tex
@@ -159,6 +159,8 @@ enum \mbox{\hyperlink{namespacereels_af9e843e456fd6d18c38b1758c8258946}{reels\+:
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
+bool \mbox{\hyperlink{namespacereels_a61012bf02c1c020a69da611a23924260}{reels\+::compare\+\_\+optimize\+\_\+eval}} (const \mbox{\hyperlink{structreels_1_1OptimizeEvalItem}{Optimize\+Eval\+Item}} a, const \mbox{\hyperlink{structreels_1_1OptimizeEvalItem}{Optimize\+Eval\+Item}} b)
+\begin{DoxyCompactList}\small\item\em Compare two \doxylink{structreels_1_1OptimizeEvalItem}{Optimize\+Eval\+Item} structures for sorting. \end{DoxyCompactList}\item 
 uint64\+\_\+t \mbox{\hyperlink{namespacereels_aea29224c74ab1bbd3337bc9e22fca30b}{reels\+::\+Murmur\+Hash64A}} (const void \texorpdfstring{$\ast$}{*}key, int len)
 \begin{DoxyCompactList}\small\item\em Murmur\+Hash2, 64-\/bit versions, by Austin Appleby. \end{DoxyCompactList}\item 
 bool \mbox{\hyperlink{namespacereels_aa589037ff1304165b2b9736c08bf3f66}{reels\+::image\+\_\+put}} (\mbox{\hyperlink{namespacereels_ac5c80b0d8cbac5bce1bdf61c9251cc75}{p\+Binary\+Image}} p\+\_\+bi, void \texorpdfstring{$\ast$}{*}p\+\_\+data, int size)
