--- a/reference/latex/namespacereels.tex
+++ b/reference/latex/namespacereels.tex
@@ -495,6 +495,8 @@ tr\+\_\+log&\\
 
 Compare two \doxylink{structreels_1_1OptimizeEvalItem}{Optimize\+Eval\+Item} structures for sorting. 
 
+A function to compare two \doxylink{structreels_1_1OptimizeEvalItem}{Optimize\+Eval\+Item} for sorting.
+
 
 \begin{DoxyParams}{Parameters}
 {\em a} & The first structure \\
